<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Log_in" 
    android:background="@drawable/bg_img_login">

    <TextView
        android:id="@+id/tv_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_marginTop="31dp"
        android:text="@string/log_in"
        android:textSize="40sp"
        android:layout_centerHorizontal="true" />
    
    
  <LinearLayout 
        android:id="@+id/login_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerInParent="true"
        >
        <EditText 
            android:id="@+id/et_user_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:background="@drawable/borde_azul_claro"
            android:gravity="center"
            android:layout_margin="10dp"
            android:ems="10"/>
       <EditText 
           android:id="@+id/et_password"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:hint="@string/password"
           android:background="@drawable/borde_azul_claro"
           android:gravity="center"
           android:layout_margin="10dp"
           />
        
       <LinearLayout
           android:id="@+id/ll_btns_login_container"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:gravity="center_horizontal" >
            
            <Button 
                android:id="@+id/btn_send"
                android:background="@drawable/borde_azul_intro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send"
                android:textColor="@color/gris_claro"
                android:layout_margin="10dp" />
            <Button 
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:background="@drawable/borde_azul_intro"
                android:textColor="@color/gris_claro"
                android:layout_margin="10dp" 
                />
            
        </LinearLayout>
                
    </LinearLayout>
   
  

</RelativeLayout>
