<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bordenegro"
    android:orientation="vertical" >

    <!--
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    -->

    <LinearLayout
        android:id="@+id/title_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/img_btn_container"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal" >

        <TextView
            android:id="@+id/intro_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/customize_welcome"
            android:textSize="40sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/img_btn_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/ibtn_logo_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="6dp"
            android:background="@drawable/logo_app_120x120"
            android:onClick="@drawable/logo_app_120x120"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tv_intro_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/intro_message" />

        <TextView
            android:id="@+id/tv_intro_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/intro_message2" />
        <!--
             <Button
            android:id="@+id/btn_entrar_intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/txt_entrar" 
            />
        -->

    </LinearLayout>

    <SlidingDrawer
        android:id="@+id/sd1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:content="@+id/hide_content_sd1"
        android:handle="@+id/handle" >

        <ImageView
            android:id="@+id/handle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="@+id/iv_handle"
            android:src="@drawable/flecha" />

        <LinearLayout
            android:id="@+id/hide_content_sd1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/biohazard"
            android:gravity="center"
            android:orientation="vertical" >

                           
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/btn_register"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bordeblanco"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/register"
                        android:textColor="@color/azul_claro" />

                    <Button
                        android:id="@+id/btn_log_in"
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bordeblanco"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/log_in"
                        android:textColor="@color/azul_claro" />

                    <Button
                        android:id="@+id/view_finder_change"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="Galeria"
                        android:background="@drawable/bordeblanco"
                        android:textColor="@color/azul_claro" />
                </LinearLayout>
            
        </LinearLayout>
    </SlidingDrawer>

    <LinearLayout
        android:id="@+id/footer_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:orientation="vertical"
        android:padding="4dp" >

        <TextView
            android:id="@+id/by_movilbrains"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/by_movilbrains" />
    </LinearLayout>

</RelativeLayout>